[tool.towncrier]
    package = "towncrier"
    package_dir = "src"
    filename = "NEWS.rst"
    issue_format = "`#{issue} <https://github.com/hawkowl/towncrier/issues/{issue}>`_"

    [[tool.towncrier.section]]
        path = ""

    [[tool.towncrier.type]]
        directory = "feature"
        name = "Features"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "bugfix"
        name = "Bugfixes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "doc"
        name = "Improved Documentation"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "removal"
        name = "Deprecations and Removals"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "misc"
        name = "Misc"
        showcontent = false


[tool.black]
target-version = ['py37']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.nox
    | \.venv
    | \.env
    | env
    | _build
    | _trial_temp.*
    | build
    | dist
    | debian
  )/
)
'''


[tool.isort]
profile = "attrs"
line_length = 88


[tool.mypy]
strict = true
# 2022-09-04: Trial's API isn't annotated yet, which limits the usefulness of type-checking
#             the unit tests. Therefore they have not been annotated yet.
exclude = '^src/towncrier/test/test_.*\.py$'

[[tool.mypy.overrides]]
module = 'click_default_group'
# 2022-09-04: This library has no type annotations.
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'incremental'
# No released version with type hints.
ignore_missing_imports = true


[build-system]
requires = [
    "setuptools ~= 44.1.1",
    "wheel ~= 0.36.2",
    "incremental == 22.10.0",
]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
parallel = true
branch = true
source = ["towncrier"]

[tool.coverage.paths]
source = ["src", ".nox/*/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
omit = [
    "src/towncrier/__main__.py",
    "src/towncrier/test/*",
]
